--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BCrypt-Official" Version="0.1.109" />
+    <PackageReference Include="BCrypt.Net-Core" Version="1.4.0" />
     <PackageReference Include="MyCouch" Version="5.0.3" />
   </ItemGroup>
 
