--- a/Bot.Tests/Bot.Tests.csproj
+++ b/Bot.Tests/Bot.Tests.csproj
@@ -1,10 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <TargetFramework>net47</TargetFramework>
-    <ApplicationIcon />
-    <StartupObject />
+    <TargetFrameworks>netstandard2.0;net47</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
