--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.4.0" />
     <PackageReference Include="MyCouch" Version="5.0.3" />
+    <PackageReference Include="MySql.Data" Version="6.10.6" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
   </ItemGroup>
 
