--- a/api/Properties/launchSettings.json
+++ b/api/Properties/launchSettings.json
@@ -2,6 +2,10 @@
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
+    "iis": {
+      "applicationUrl": "http://localhost",
+      "sslPort": 0
+    },
     "iisExpress": {
       "applicationUrl": "http://localhost:57463/",
       "sslPort": 0
@@ -17,9 +21,10 @@
       }
     },
     "Web": {
-      "commandName": "Project",
+      "commandName": "IIS",
+      "workingDirectory": "E:\\Code\\CommunityProject\\Api",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/gateway",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
