--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
@@ -14,5 +14,8 @@
   },
   "Settings": {
     "CouchDbUri": "http://root:123456789@localhost:5984/"
+  },
+  "ApplicationInsights": {
+    "InstrumentationKey": "b2488888-f6b6-4ea3-8a23-2ae5db8fdfce"
   }
 }
