--- a/Bot/Bot.csproj
+++ b/Bot/Bot.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <StartupObject>Bot.KungRaseriBot</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,12 +12,13 @@
     <PackageReference Include="DSharpPlus.Interactivity" Version="3.2.3" />
     <PackageReference Include="DSharpPlus.Rest" Version="3.2.3" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="3.2.3" />
-    <PackageReference Include="TwitchLib" Version="1.6.0" />
-    <PackageReference Include="MyCouch" Version="5.0.3" />
+    <PackageReference Include="TwitchLib" Version="2.0.1" />
+    <PackageReference Include="MyCouch" Version="5.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\ThirdParty\ThirdParty.csproj" />
   </ItemGroup>
 
 </Project>
