--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -6,9 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.4.0" />
-    <PackageReference Include="MyCouch" Version="5.0.3" />
+    <PackageReference Include="MyCouch" Version="5.1.1" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
+    <PackageReference Include="TwitchLib" Version="2.0.1" />
   </ItemGroup>
-
 </Project>
