--- a/KungBot.Discord/KungBot.Discord.csproj
+++ b/KungBot.Discord/KungBot.Discord.csproj
@@ -6,18 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="TwitchLib" Version="2.0.1" />
-    <PackageReference Include="TwitchLib.Client" Version="2.0.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
+    <PackageReference Include="TwitchLib" Version="2.1.0" />
+    <PackageReference Include="TwitchLib.Client" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Data\Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="DSharpPlus.CommandsNext">
-      <HintPath>C:\Users\count\.nuget\packages\dsharpplus.commandsnext\3.2.3\lib\netstandard2.0\DSharpPlus.CommandsNext.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
