--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="BCrypt.Net-Core" Version="1.4.0" />
     <PackageReference Include="MyCouch" Version="5.1.1" />
     <PackageReference Include="MySql.Data" Version="6.10.6" />
+    <PackageReference Include="SanderSade.UrlShortener" Version="1.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
     <PackageReference Include="TwitchLib" Version="2.0.1" />
   </ItemGroup>
