added projectguids to the project files.  Hopefully this fixes the code analysis issue.

--- a/Api.Tests/Api.Tests.csproj
+++ b/Api.Tests/Api.Tests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
+    <ProjectGuid>79622D71-8AEC-4C51-A993-79141DE4BCA8</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
