--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '3'
 services:
-  couchdb:
-    image: "couchdb:2.1.1"
-    ports:
-     - "5984:5984"
   web:
     build: .
     ports:
      - "80:80"
+    depends_on:
+     - "couchdb"
+  couchdb:
+    image: "couchdb:2.1.1"
+    ports:
+     - "5984:5984"
