--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,13 @@ services:
     build: .
     ports:
      - "80:80"
+    networks:
+     - "api-services-network"
     depends_on:
      - "couchdb"
   couchdb:
     image: "couchdb:2.1.1"
     ports:
      - "5984:5984"
+    networks:
+     - "api-services-network"
