--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     image: "couchdb:2.1.1"
     ports:
      - "5984:5984"
+    volumes:
+     - /opt/couchdb/data
 networks:
   default:
     external:
