Some minor refactoring to the IEntity class and dependent models Implemented simple levelling system based on messages sent via chat during stream Imported Streamelements messages count for each user on that board Some random work on a chat bot that learns, tons more work needs to be done on this

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,10 @@
-**\bin\
-**\obj\
+.dockerignore
+.env
 .git
-.cache
+.gitignore
 .vs
 .vscode
-.gitattributes
-.gitignore
-.travis.yml
-Dockerfile
-KungRaseri.sln
-KungRaseri.sln.DotSettings
-.md
-.csproj
-.pdb
+docker-compose.yml
+docker-compose.*.yml
+*/bin
+*/obj
