--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "Settings": {
-    "CouchDbUri": "http://root:123456789@localhost:5984/"
+    "CouchDbUri": "http://admin:123456789@localhost:5984/"
   },
   "ApplicationInsights": {
     "InstrumentationKey": "b2488888-f6b6-4ea3-8a23-2ae5db8fdfce"
