--- a/Api.Tests/Api.Tests.csproj
+++ b/Api.Tests/Api.Tests.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <ProjectGuid>79622D71-8AEC-4C51-A993-79141DE4BCA8</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
