--- a/KungBot.Discord/KungBot.Discord.csproj
+++ b/KungBot.Discord/KungBot.Discord.csproj
@@ -7,9 +7,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="knowledge.siml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Dialogs\greetings.siml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.2" />
+    <PackageReference Include="DSharpPlus" Version="3.2.3" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="3.2.3" />
-    <PackageReference Include="TwitchLib" Version="2.1.1" />
-    <PackageReference Include="TwitchLib.Client" Version="2.1.1" />
+    <PackageReference Include="DSharpPlus.Interactivity" Version="3.2.3" />
+    <PackageReference Include="DSharpPlus.VoiceNext" Version="3.2.3" />
+    <PackageReference Include="DSharpPlus.WebSocket.WebSocket4NetCore" Version="3.2.3" />
+    <PackageReference Include="Syn.Bot" Version="3.0.1" />
+    <PackageReference Include="Syn.Bot.Channels" Version="1.0.9" />
+    <PackageReference Include="Syn.Neuro" Version="1.0.7" />
+    <PackageReference Include="Syn.Oryzer" Version="1.0.7" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
+    <PackageReference Include="Telegram.Bot" Version="14.6.0" />
+    <PackageReference Include="TwitchLib" Version="2.1.5" />
+    <PackageReference Include="TwitchLib.Client" Version="2.1.4" />
   </ItemGroup>
 
   <ItemGroup>
