--- a/KungBot.Discord/KungBot.Discord.csproj
+++ b/KungBot.Discord/KungBot.Discord.csproj
@@ -37,4 +37,10 @@
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="MoreLinq">
+      <HintPath>C:\Users\count\.nuget\packages\morelinq\3.0.0\lib\netstandard2.0\MoreLinq.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
