--- a/KungBot.Twitch/KungBot.Twitch.csproj
+++ b/KungBot.Twitch/KungBot.Twitch.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="NewFolder\**" />
+    <EmbeddedResource Remove="NewFolder\**" />
+    <None Remove="NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
     <PackageReference Include="morelinq" Version="3.0.0" />
@@ -27,10 +33,6 @@
     <Reference Include="DSharpPlus.CommandsNext">
       <HintPath>C:\Users\count\.nuget\packages\dsharpplus.commandsnext\3.2.3\lib\netstandard2.0\DSharpPlus.CommandsNext.dll</HintPath>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="NewFolder\" />
   </ItemGroup>
 
 </Project>
