--- a/KungBot.Twitch/KungBot.Twitch.csproj
+++ b/KungBot.Twitch/KungBot.Twitch.csproj
@@ -27,6 +27,9 @@
     <Reference Include="DSharpPlus.CommandsNext">
       <HintPath>C:\Users\count\.nuget\packages\dsharpplus.commandsnext\3.2.3\lib\netstandard2.0\DSharpPlus.CommandsNext.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Extensions.DependencyInjection">
+      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection\2.1.1\lib\netcoreapp2.0\Microsoft.Extensions.DependencyInjection.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
