--- a/KungBot.Twitch/KungBot.Twitch.csproj
+++ b/KungBot.Twitch/KungBot.Twitch.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
     <PackageReference Include="morelinq" Version="3.0.0" />
@@ -32,9 +33,6 @@
     </Reference>
     <Reference Include="DSharpPlus.CommandsNext">
       <HintPath>C:\Users\count\.nuget\packages\dsharpplus.commandsnext\3.2.3\lib\netstandard2.0\DSharpPlus.CommandsNext.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Extensions.DependencyInjection">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.extensions.dependencyinjection\2.1.1\lib\netcoreapp2.0\Microsoft.Extensions.DependencyInjection.dll</HintPath>
     </Reference>
   </ItemGroup>
 
