Renaming of User to Account Some minor refactoring and enhancements to the couchdb store

--- a/Api/Properties/launchSettings.json
+++ b/Api/Properties/launchSettings.json
@@ -18,7 +18,8 @@
       "launchUrl": "api/gateway",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "use64Bit": true
     },
     "Web": {
       "commandName": "IIS",
