--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Core" Version="1.5.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.7.2" />
     <PackageReference Include="MyCouch" Version="6.0.0" />
     <PackageReference Include="MySql.Data" Version="8.0.12" />
     <PackageReference Include="SanderSade.UrlShortener" Version="1.0.0" />
